[gd_scene load_steps=6 format=2]

[ext_resource path="res://main/main.gd" type="Script" id=1]
[ext_resource path="res://assets/gray_editor_theme.tres" type="Theme" id=2]
[ext_resource path="res://main/path/path_container.gd" type="Script" id=3]
[ext_resource path="res://assets/icon/material_sharp/add-new-24.png" type="Texture" id=4]
[ext_resource path="res://assets/icon/material_sharp/export-24.png" type="Texture" id=5]

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
editor/display_folded = true
margin_right = 1024.0
margin_bottom = 4.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="Control/VBoxContainer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 4.0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/MarginContainer"]
editor/display_folded = true
margin_right = 1024.0
margin_bottom = 4.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/VBoxContainer/MarginContainer/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1022.0
margin_bottom = 2.0
scroll_vertical_enabled = false

[node name="path_container" type="HBoxContainer" parent="Control/VBoxContainer/MarginContainer/MarginContainer/ScrollContainer"]
custom_constants/separation = 0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 55.0
margin_bottom = 596.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="Control/VBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 55.0
margin_bottom = 596.0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 55.0
margin_bottom = 596.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 47.0
margin_bottom = 588.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="btn_new" type="MenuButton" parent="Control/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 39.0
margin_bottom = 34.0
icon = ExtResource( 4 )

[node name="Control" type="Control" parent="Control/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 39.0
margin_bottom = 546.0
size_flags_vertical = 3

[node name="btn_render" type="ToolButton" parent="Control/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 546.0
margin_right = 39.0
margin_bottom = 580.0
icon = ExtResource( 5 )

[node name="scene_graphedit" type="GraphEdit" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 1024.0
margin_bottom = 596.0
size_flags_horizontal = 3
scroll_offset = Vector2( -486, -285 )
